# model-zoo-vad

./: API.md  CMakeLists.txt  NOTICE  README.md  package.xml
.github/workflows/: code-style.yml
examples/: simple_demo.cpp
include/: vad_service.h
python/: pyproject.toml  setup.py  vad_bindings.cpp
python/examples/: vad_file_demo.py
python/spacemit_vad/: __init__.py
src/: vad_backend_factory.cpp  vad_callback.hpp  vad_engine.cpp  vad_presets.cpp  vad_types.hpp
src/backends/: vad_backend.hpp
src/backends/silero/: silero_backend.cpp  silero_backend.hpp
